refined plotting and minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -422,6 +422,7 @@
     "                                  cbar_kws=dict(pad=0.05))\n",
     "# move label to title\n",
     "move_cbar_label_to_title(fig)\n",
+    "plt.show()\n",
     "vis.show_adjacency_matrix(\"mesh\", True)"
    ],
    "execution_count": 7,
@@ -1515,19 +1516,21 @@
     "from opdynamics.utils.plot_utils import move_cbar_label_to_title\n",
     "with sns.plotting_context(\"paper\"):\n",
     "    # create figure and grid\n",
-    "    fig = plt.figure(figsize=(3.375, 2.618))\n",
-    "    gs = gridspec.GridSpec(nrows=2, ncols=2, wspace=1.1, hspace=0.9, height_ratios=[1,1.618])\n",
+    "    fig = plt.figure(figsize=(3.375, 2.618), dpi=200)\n",
+    "    gs = gridspec.GridSpec(nrows=2, ncols=2, wspace=1.1, hspace=0.9,\n",
+    "                           left=0.18, right=0.97, bottom=0.15,\n",
+    "                           height_ratios=[1,1.618])\n",
     "    gs_trace_1 = gridspec.GridSpecFromSubplotSpec(1, 2, subplot_spec=gs[0,0],\n",
-    "                                                  width_ratios=[1, 0.15], \n",
+    "                                                  width_ratios=[1, 0.15],\n",
     "                                                  wspace=0.1)\n",
     "    gs_trace_2 = gridspec.GridSpecFromSubplotSpec(1, 2,  subplot_spec=gs[0,1],\n",
-    "                                                  width_ratios=[1, 0.15], \n",
+    "                                                  width_ratios=[1, 0.15],\n",
     "                                                  wspace=0.1)\n",
     "    gs_activity = gridspec.GridSpecFromSubplotSpec(1, 2,  subplot_spec=gs[1,0],\n",
-    "                                                  width_ratios=[1, 0.1], \n",
+    "                                                  width_ratios=[1, 0.1],\n",
     "                                                  wspace=0.1)\n",
     "    gs_nn = gridspec.GridSpecFromSubplotSpec(2, 2,  subplot_spec=gs[1,1],\n",
-    "                                             width_ratios=[1, 0.1], height_ratios=[0.1, 1], \n",
+    "                                             width_ratios=[1, 0.1], height_ratios=[0.1, 1],\n",
     "                                             wspace=0.1, hspace=0.1)\n",
     "    # create axes\n",
     "    ax_trace_1 = fig.add_subplot(gs_trace_1[0])\n",
@@ -1548,15 +1551,15 @@
     "    ax_dist_2.tick_params(labelleft=False, bottom=False, labelbottom=False)\n",
     "    sns.despine(ax=ax_marg_x, left=True)\n",
     "    sns.despine(ax=ax_marg_y, bottom=True)\n",
-    "    \n",
+    "\n",
     "    # polarised opinions trace\n",
-    "    VisEchoChamber(ec_polar)\n",
-    "    vis.show_opinions(ax=ax_trace_1, color_code='line', subsample=10, lw=0.5, title=\"Polarised\")\n",
+    "    vis = VisEchoChamber(ec_polar)\n",
+    "    vis.show_opinions(ax=ax_trace_1, color_code='line', subsample=10, lw=0.5, title=\"Polarised\", rasterized=True)\n",
     "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(shade=False, bw=0.15), vertical=True, title=False)\n",
     "\n",
     "    # radicalised opinions trace\n",
     "    vis_radical = VisEchoChamber(ec_radical)\n",
-    "    vis_radical.show_opinions(ax=ax_trace_2, color_code='line', subsample=2, lw=1, title=\"Radicalised\")\n",
+    "    vis_radical.show_opinions(ax=ax_trace_2, color_code='line', subsample=2, lw=1, title=\"Radicalised\", rasterized=True)\n",
     "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(shade=False, bw=0.15), vertical=True, title=False)\n",
     "\n",
     "    # activity vs opinion\n",
@@ -1566,6 +1569,7 @@
     "    _,_,cbar = show_activity_vs_opinion(df_ao.opinion.values, df_ao.activity.values,\n",
     "                                        ax=ax_activity,\n",
     "                                        bins=N, norm=LogNorm(vmin=10/N),\n",
+    "                                        cmap='Spectral_r',\n",
     "                                        cbar_kws=dict(cax=ax_activity_cax),\n",
     "                                        s=0.01, rasterized=True, title=False)\n",
     "    cbar.outline.set_visible(False)\n",
@@ -1594,9 +1598,9 @@
     "    ax_joint.set_ylim(-5, 5)\n",
     "    ax_joint.set_xlabel(OPINION_SYMBOL)\n",
     "    ax_joint.set_ylabel(MEAN_NEAREST_NEIGHBOUR)\n",
-    "    \n",
+    "\n",
     "    for letter, _ax in zip(string.ascii_lowercase, [ax_trace_1,ax_trace_2, ax_activity, ax_marg_x]):\n",
-    "        _ax.annotate(f\"({letter})\", xy=(0, 1), xycoords=\"axes fraction\", \n",
+    "        _ax.annotate(f\"({letter})\", xy=(0, 1), xycoords=\"axes fraction\",\n",
     "                        xytext=(-27, 5), textcoords=\"offset points\",\n",
     "                        va=\"bottom\", ha=\"right\")\n",
     "    # reduce space between axes labels and axes\n",
@@ -2686,7 +2690,7 @@
     "        ax.set_xlabel(f'{OPINION_SYMBOL}')\n",
     "    for ax in g.axes[:,0]:\n",
     "        ax.set_ylabel(f'P({OPINION_SYMBOL})')\n",
-    "    g.add_legend(fontsize='large')\n",
+    "    g.add_legend(fontsize='small')\n",
     "    print(\"saving\")\n",
     "    g.savefig(\"output/dist_n.pdf\")"
    ],
