--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -1926,9 +1926,9 @@
     "\n",
     "Either\n",
     "1. Contrast own opinion with another\n",
-    "    $\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_i - x_k)))$\n",
+    "$\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_i - x_k)))$\n",
     "1. Show another agent's opinion\n",
-    "    $\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_k)))$\n",
+    "$\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_k)))$\n",
     "\n",
     "\n",
     " Symbol        | Keyword      | Class (inherits from)                  | Meaning\n",
@@ -2482,10 +2482,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "zs = calc_distribution_differences(df, \"D\", \"sample_size\", range_parameters,\n",
+    "range_parameters['sample_size']['range'] = list(range(1, 21))\n",
+    "zs_20 = calc_distribution_differences(df, \"D\", \"sample_size\", range_parameters,\n",
     "                                   N=parameters[\"N\"])\n",
     "\n",
-    "zs"
+    "zs_20"
    ],
    "metadata": {
     "collapsed": false,
@@ -2502,7 +2503,7 @@
     "from matplotlib.cbook import flatten\n",
     "n_cols = len(range_parameters['alpha']['range'])\n",
     "n_rows = len(range_parameters['K']['range'])\n",
-    "width = 3.375/n_cols\n",
+    "width = 3./n_cols\n",
     "aspect = 1.2\n",
     "height = width/aspect\n",
     "\n",
@@ -2513,7 +2514,7 @@
     "        hue='β',\n",
     "        col='α',\n",
     "        row='K',\n",
-    "        data=zs.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
+    "        data=zs_20.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
     "        height=height,\n",
     "        aspect=aspect,\n",
     "        # palette=sns.color_palette('colorblind', 3),\n",
@@ -2548,7 +2549,7 @@
     "        hue='β',\n",
     "        col='α',\n",
     "        row='K',\n",
-    "        data=zs.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
+    "        data=zs_20.rename({'beta':'β', 'alpha':'α'}, axis=1),\n",
     "        height=height,\n",
     "        aspect=aspect,\n",
     "        # palette=sns.color_palette('colorblind', 3),\n",
@@ -2659,7 +2660,8 @@
     "    'K': K,\n",
     "    'beta': β,\n",
     "}\n",
-    "sub_D_range = [0.0, 1.0, 3.0, 5.0]\n",
+    "sub_D_range = [0, 1.0, 3.0, 5.0]\n",
+    "col_wrap = len(sub_D_range)//2\n",
     "sub_sample_range = [1, 10, 40]\n",
     "print(\"masking\")\n",
     "sub_df = df_multi_mask(\n",
@@ -2671,26 +2673,46 @@
     ").to_pandas_df().rename({'sample_size':'n', 'opinion':OPINION_SYMBOL}, axis=1)\n",
     "print(\"plotting\")\n",
     "with sns.plotting_context(\"paper\"):\n",
+    "    plt.rcParams['figure.dpi'] = 200\n",
     "    sns.set_palette(sns.color_palette(\"colorblind\", len(sub_sample_range)))\n",
     "    n_cols = len(sub_D_range)\n",
     "    n_rows = 1\n",
-    "    width = 3.375/n_cols\n",
+    "    width = 4/n_cols\n",
     "    aspect = 1\n",
     "    height = width/aspect\n",
     "    grid_kwargs = dict(sharex=True, sharey=True,\n",
-    "                    margin_titles=False, legend_out=True, height=height, aspect=aspect)\n",
-    "    kde_kwargs = dict(bw=0.1)\n",
-    "    g = sns.FacetGrid(sub_df, col=\"D\", hue=\"n\", **grid_kwargs)\n",
+    "                    margin_titles=False, legend_out=True,\n",
+    "                    height=height, aspect=aspect,\n",
+    "                    )\n",
+    "    kde_kwargs = dict(lw=0.5, bw=0.1)\n",
+    "    sub_df['D'] = sub_df['D'].astype(int)\n",
+    "    g = sns.FacetGrid(sub_df, col=\"D\", col_wrap=col_wrap, hue=\"n\", **grid_kwargs)\n",
     "\n",
     "    kde_kwargs.setdefault(\"shade\", True)\n",
     "    kde_kwargs.setdefault(\"shade_lowest\", False)\n",
     "    g.map(sns.kdeplot, OPINION_SYMBOL, **kde_kwargs)\n",
-    "    g.set(xlim=(-5,5))\n",
-    "    for ax in g.axes[-1]:\n",
+    "    g.set(xlim=(-5,5), ylim=(0, g.axes[0].get_ylim()[1]*1.1))\n",
+    "    for ax in g.axes[-col_wrap:]:\n",
     "        ax.set_xlabel(f'{OPINION_SYMBOL}')\n",
-    "    for ax in g.axes[:,0]:\n",
+    "    for ax in g.axes[0:-1:col_wrap]:\n",
     "        ax.set_ylabel(f'P({OPINION_SYMBOL})')\n",
     "    g.add_legend(fontsize='small')\n",
+    "    for line in g._legend.get_lines():\n",
+    "        line.set_linewidth(1.0)\n",
+    "    for f, f_ax in enumerate(g.axes):\n",
+    "    # f_ax = g.axes[1]\n",
+    "        y_data_max = max([max(l.get_ydata()) for l in f_ax.get_lines()])*0.96\n",
+    "        y_max = f_ax.get_ylim()[1]*1.05\n",
+    "        color='grey'\n",
+    "        f_ax.annotate(PEAK_DISTANCE,\n",
+    "                    xy=(0, y_data_max),\n",
+    "                    xytext=(0, y_max),\n",
+    "                    arrowprops=dict(arrowstyle=f'-[,widthB={max(0.35-0.1*f**1.5,0)}',\n",
+    "                                    color='k', alpha=0.7, lw=0.5),\n",
+    "                      alpha=0.8,\n",
+    "                    fontsize='x-small',\n",
+    "                    va='center',\n",
+    "                    ha='center')\n",
     "    print(\"saving\")\n",
     "    g.savefig(\"output/dist_n.pdf\")"
    ],
@@ -2722,7 +2744,7 @@
     ").to_pandas_df().rename({'opinion':OPINION_SYMBOL}, axis=1)\n",
     "print(\"plotting\")\n",
     "with sns.plotting_context(\"paper\"):\n",
-    "    fig, axs = plt.subplots(ncols=2, figsize=(2, 2), dpi=200, gridspec_kw=dict(width_ratios=[1, 0.1]))\n",
+    "    fig, axs = plt.subplots(ncols=2, figsize=(3.375, 2), dpi=200, gridspec_kw=dict(width_ratios=[1, 0.1]))\n",
     "    ax = axs[0]\n",
     "    cbar_ax = axs[1]\n",
     "    sns.kdeplot(sub_df[OPINION_SYMBOL], sub_df[\"D\"],\n",
