--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2886,6 +2886,77 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Delayed internal noise"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# suppress logging for clean progressbar\n",
+    "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
+    "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
+    "old_dir, new_dir = set_cache_dir(os.path.join(\"content\",\".cache\",\"delayed_noise\"))\n",
+    "\n",
+    "noise_start = 5.\n",
+    "noise_length = 5.\n",
+    "recovery = 5.\n",
+    "num = 1\n",
+    "interval = 0\n",
+    "import opdynamics.networks.echochamber as ec\n",
+    "\n",
+    "kwargs = dict(N=1000,\n",
+    "              m=10,\n",
+    "              activity_distribution = negpowerlaw,\n",
+    "              epsilon=1e-2,\n",
+    "              gamma=2.1,\n",
+    "              dt=0.01,\n",
+    "              K=3,\n",
+    "              beta=3,\n",
+    "              alpha=3,\n",
+    "              r=0.5,\n",
+    "              update_conn=True,\n",
+    "              cls=ec.SampleChamber,\n",
+    "              method='RK45',\n",
+    "              D=5,\n",
+    "              sample_size=30,\n",
+    "              sample_method=\"basic\",\n",
+    "              noise_start=noise_start,\n",
+    "              noise_length=noise_length,\n",
+    "              recovery=recovery,\n",
+    "              interval=interval,\n",
+    "              num=num,\n",
+    "             )\n",
+    "\n",
+    "nec_list = Simulation.run_product(range_parameters={'D':{'range':[1,3,5]},\n",
+    "                                               'sample_size':{'range':[1,30,50]},\n",
+    "                                               'sample_method': {'range':['basic','subsample']},\n",
+    "                                               },\n",
+    "                                  cache=\"all\",\n",
+    "                                  cache_sim=False,\n",
+    "                                  parallel=True,\n",
+    "                                  plot_opinion=True,\n",
+    "                                  **kwargs\n",
+    "                                  )\n",
+    "\n",
+    "old_dir, new_dir = set_cache_dir(old_dir)\n",
+    "logging.getLogger().setLevel(logging_level)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
