update SocialInteractino repr to include `update_conn`

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2086,7 +2086,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Compare sample methods"
+    "# Compare sample methods"
    ],
    "metadata": {
     "collapsed": false
