minor bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2038,7 +2038,6 @@
     "recovery = 5.\n",
     "num = 1\n",
     "interval = 0\n",
-    "import opdynamics.networks.echochamber as ec\n",
     "\n",
     "kwargs = dict(N=1000,\n",
     "              m=10,\n",
@@ -2051,7 +2050,7 @@
     "              alpha=3,\n",
     "              r=0.5,\n",
     "              update_conn=True,\n",
-    "              cls=ec.SampleChamber,\n",
+    "              cls=SampleChamber,\n",
     "              method='RK45',\n",
     "              D=5,\n",
     "              sample_size=30,\n",
