update sim caching configuration to allow a custom file name cache context manager update calling of seaborn hist method to be compatible with "vertical"

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2021,6 +2021,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#@title Playground\n",
+    "# suppress logging for clean progressbar\n",
+    "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
+    "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
+    "old_dir, new_dir = set_cache_dir(os.path.join(\"/content\",\".cache\",\"delayed_noise\"))\n",
+    "\n",
+    "noise_start = 10.\n",
+    "noise_length = 10.\n",
+    "recovery = 10.\n",
+    "num = 1\n",
+    "interval = 0\n",
+    "\n",
+    "# Nudge arguments\n",
+    "\n",
+    "D = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "sample_size = 30 #@param {type:\"slider\", min:0, max:50, step:1}\n",
+    "sample_method = \"basic\" #@param [\"basic\", \"subsample\"]\n",
+    "seed = \"1337\" #@param [\"1337\", \"10725983\", \"7988657\", \"1572039\", \"15379820\"] {allow-input: true}\n",
+    "update_conn = True #@param {type:\"boolean\"}\n",
+    "# polar opinions\n",
+    "N = 1000 #@param {type:\"integer\"}\n",
+    "m = 10 #@param {type:\"integer\"}\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "ε = 0.01 #@param {type:\"slider\", min:0.005, max:0.05, step:0.005}\n",
+    "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
+    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
+    "dt = 0.01\n",
+    "\n",
+    "integration_method = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "\n",
+    "cls = \"SampleChamber\" #@param [\"SampleChamber\", \"OpenChamber\"]\n",
+    "\n",
+    "cls_pick = {\"SampleChamber\": SampleChamber, \"OpenChamber\": OpenChamber}[cls]\n",
+    "\n",
+    "kwargs = dict(N=N,\n",
+    "              m=m,\n",
+    "              activity_distribution = negpowerlaw,\n",
+    "              epsilon=ε,\n",
+    "              gamma=Υ,\n",
+    "              dt=dt,\n",
+    "              K=K,\n",
+    "              beta=β,\n",
+    "              alpha=α,\n",
+    "              r=r,\n",
+    "              update_conn=update_conn,\n",
+    "              cls=cls_pick,\n",
+    "              method=integration_method,\n",
+    "              D=D,\n",
+    "              sample_size=sample_size,\n",
+    "              sample_method=sample_method,\n",
+    "              noise_start=noise_start,\n",
+    "              noise_length=noise_length,\n",
+    "              recovery=recovery,\n",
+    "              interval=interval,\n",
+    "              num=num,\n",
+    "              seed=int(seed)\n",
+    "             )\n",
+    "\n",
+    "with sns.plotting_context(\"paper\"):\n",
+    "    plt.rcParams['figure.dpi'] = 200\n",
+    "    plt.rcParams['figure.figsize'] = (3.375, 3)\n",
+    "\n",
+    "    nec = Simulation.run_periodic_noise(**kwargs, plot_opinion=True)\n",
+    "\n",
+    "old_dir, new_dir = set_cache_dir(old_dir)\n",
+    "logging.getLogger().setLevel(logging_level)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Range"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -2038,7 +2132,7 @@
     "recovery = 5.\n",
     "num = 1\n",
     "interval = 0\n",
-    "\n",
+    "seeds = [1337, 10725983, 7988657, 1572039, 15379820]\n",
     "kwargs = dict(N=1000,\n",
     "              m=10,\n",
     "              activity_distribution = negpowerlaw,\n",
@@ -2064,10 +2158,13 @@
     "with sns.plotting_context(\"paper\"):\n",
     "    plt.rcParams['figure.dpi'] = 200\n",
     "    plt.rcParams['figure.figsize'] = (3.375, 3)\n",
-    "    nec_list = Simulation.run_product(range_parameters={'D':{'range':[1,3,5]},\n",
-    "                                               'sample_size':{'range':[1,30,50]},\n",
-    "                                               'sample_method': {'range':['basic','subsample']},\n",
-    "                                               },\n",
+    "    nec_list = Simulation.run_product(range_parameters={\n",
+    "        'D':{'range':[1,3,5]},\n",
+    "        'sample_size':{'range':[1,30,50]},\n",
+    "        'sample_method': {'range':['basic','subsample']},\n",
+    "        'update_conn': {'range':[True]},\n",
+    "        'seed': {'range':seeds}\n",
+    "        },\n",
     "                                      cache=\"all\",\n",
     "                                      cache_sim=False,\n",
     "                                      parallel=True,\n",
@@ -2077,10 +2174,62 @@
     "\n",
     "old_dir, new_dir = set_cache_dir(old_dir)\n",
     "logging.getLogger().setLevel(logging_level)\n",
-    "\n"
+    "\n",
+    "nec_dict = {}\n",
+    "for nec in nec_list:\n",
+    "    key = (tuple(nec._D_hist), nec._sample_method[0], nec._sample_size)\n",
+    "    nec_dict.setdefault(key, [])\n",
+    "    nec_dict[key].append(nec)"
    ],
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from tqdm.contrib import tenumerate\n",
+    "from matplotlib.cbook import flatten\n",
+    "\n",
+    "num_seeds = len(seeds)\n",
+    "\n",
+    "with sns.plotting_context(\"paper\"):\n",
+    "    plt.rcParams[\"axes.titlesize\"] = 'xx-small'\n",
+    "    plot_colors =  sns.color_palette(\"Set1\", n_colors=num_seeds)\n",
+    "    fig, axs = plt.subplots(len(nec_dict.keys()), num_seeds+1,\n",
+    "                            figsize=(5, 15),\n",
+    "                            sharex=\"col\", sharey=\"all\",\n",
+    "                            )\n",
+    "    fig.subplots_adjust(hspace=0.3)\n",
+    "    sns.despine(fig, bottom=True)\n",
+    "    for i, key in tenumerate(sorted(nec_dict.keys())):\n",
+    "        print(key)\n",
+    "        for j, nec in tenumerate(nec_dict[key]):\n",
+    "            _visec = VisEchoChamber(nec)\n",
+    "            title_key = f\"{key[0][1][1]}, {key[1]}, {key[2]}\"\n",
+    "            _visec.show_opinions(\"line\", subsample=50,\n",
+    "                                 title=title_key,\n",
+    "                                 fig=fig, ax=axs[i,j])\n",
+    "            _visec.show_opinions_snapshot(t=20, vertical=True, color=plot_colors[j],\n",
+    "                                   ax=axs[i, -1], title=\"\",\n",
+    "                                   element=\"poly\", stat=\"density\")\n",
+    "            axs[i,j].axvline(20, ymin=-10, ymax=10, lw=0.5, c=plot_colors[j])\n",
+    "            axs[i,j].axvline(10, ymin=-10, ymax=10, ls='--', lw=0.5, c=plot_colors[j])\n",
+    "    for ax in flatten(axs[:, 1:]):\n",
+    "        ax.set_ylabel(\"\")\n",
+    "    for ax in flatten(axs[:-1, :]):\n",
+    "        ax.set_xlabel(\"\")\n",
+    "\n",
+    "    axs[0,0].set_ylim(-5,5)\n",
+    "print(\"showing\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
