--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -164,6 +164,7 @@
     "np.random.seed(1337)\n",
     "sns.set(context=\"notebook\", style=\"ticks\",\n",
     "        rc={\n",
+    "            \"pdf.fonttype\": 42, # embed font in output\n",
     "            \"figure.facecolor\":\"white\",\n",
     "            \"axes.spines.left\": True,\n",
     "            \"axes.spines.bottom\": True,\n",
@@ -2029,6 +2030,7 @@
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
     "logging.getLogger().setLevel(logging.WARNING)\n",
     "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
+    "from opdynamics.metrics.opinions import distribution_modality\n",
     "old_dir, new_dir = set_cache_dir(os.path.join(\"/content\",\".cache\",\"delayed_noise\"))\n",
     "\n",
     "noise_start = 10.\n",
@@ -2040,22 +2042,22 @@
     "# Nudge arguments\n",
     "\n",
     "D = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "sample_size = 30 #@param {type:\"slider\", min:0, max:50, step:1}\n",
-    "sample_method = \"basic\" #@param [\"basic\", \"subsample\"]\n",
-    "seed = \"1337\" #@param [\"1337\", \"10725983\", \"7988657\", \"1572039\", \"15379820\"] {allow-input: true}\n",
+    "sample_size = 50 #@param {type:\"slider\", min:0, max:50, step:1}\n",
+    "sample_method = \"subsample\" #@param [\"basic\", \"subsample\"]\n",
+    "seed = \"15379820\" #@param [\"1337\", \"10725983\", \"7988657\", \"1572039\", \"15379820\"] {allow-input: true}\n",
     "update_conn = True #@param {type:\"boolean\"}\n",
     "# polar opinions\n",
     "N = 1000 #@param {type:\"integer\"}\n",
     "m = 10 #@param {type:\"integer\"}\n",
-    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "α = 2 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 2 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "ε = 0.01 #@param {type:\"slider\", min:0.005, max:0.05, step:0.005}\n",
     "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
     "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
     "dt = 0.01\n",
     "\n",
-    "integration_method = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "integration_method = \"RK45\" #@param [\"Euler\", \"RK45\"] {allow-input: true}\n",
     "\n",
     "cls = \"SampleChamber\" #@param [\"SampleChamber\", \"OpenChamber\"]\n",
     "\n",
@@ -2090,7 +2092,31 @@
     "    plt.rcParams['figure.figsize'] = (3.375, 3)\n",
     "\n",
     "    nec = Simulation.run_periodic_noise(**kwargs, plot_opinion=True)\n",
+    "    fig = plt.gcf()\n",
+    "    dist_axs = fig.axes[1:]\n",
+    "    for t, ax in zip([noise_start,noise_start+noise_length,noise_start+noise_length+recovery],\n",
+    "                     dist_axs):\n",
+    "        idx = np.argmin(np.abs(t - nec.result.t)) if isinstance(t, float) else t\n",
+    "        opinions = nec.result.y[:, idx]\n",
+    "        pop_dist = distribution_modality(opinions)\n",
+    "        ax.set_title(\"\")\n",
     "\n",
+    "        y_max = ax.get_ylim()[1]\n",
+    "        color='grey'\n",
+    "        ax.annotate(f\"{pop_dist:.2f}\",\n",
+    "                    xy=(0, y_max),\n",
+    "                    xytext=(0, y_max*1.05),\n",
+    "                    arrowprops=dict(arrowstyle=f'-[,widthB={pop_dist}',\n",
+    "                                    color='k', alpha=0.7, lw=0.5),\n",
+    "                      alpha=0.8,\n",
+    "                    fontsize='x-small',\n",
+    "                    va='center',\n",
+    "                    ha='center')\n",
+    "\n",
+    "        if t <= noise_start:\n",
+    "            ax.annotate(PEAK_DISTANCE, xy=(0,1), xycoords='axes fraction',\n",
+    "                        va='bottom', ha='right', fontsize='small')\n",
+    "    fig.savefig(\"output/delayed_noise_sample.pdf\")\n",
     "old_dir, new_dir = set_cache_dir(old_dir)\n",
     "logging.getLogger().setLevel(logging_level)"
    ],
@@ -2127,9 +2153,9 @@
     "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
     "old_dir, new_dir = set_cache_dir(os.path.join(\"/content\",\".cache\",\"delayed_noise\"))\n",
     "\n",
-    "noise_start = 5.\n",
-    "noise_length = 5.\n",
-    "recovery = 5.\n",
+    "noise_start = 10.\n",
+    "noise_length = 10.\n",
+    "recovery = 10.\n",
     "num = 1\n",
     "interval = 0\n",
     "seeds = [1337, 10725983, 7988657, 1572039, 15379820]\n",
@@ -2158,19 +2184,19 @@
     "with sns.plotting_context(\"paper\"):\n",
     "    plt.rcParams['figure.dpi'] = 200\n",
     "    plt.rcParams['figure.figsize'] = (3.375, 3)\n",
-    "    nec_list = Simulation.run_product(range_parameters={\n",
-    "        'D':{'range':[1,3,5]},\n",
-    "        'sample_size':{'range':[1,30,50]},\n",
-    "        'sample_method': {'range':['basic','subsample']},\n",
-    "        'update_conn': {'range':[True]},\n",
-    "        'seed': {'range':seeds}\n",
-    "        },\n",
-    "                                      cache=\"all\",\n",
-    "                                      cache_sim=False,\n",
-    "                                      parallel=True,\n",
-    "                                      plot_opinion=True,\n",
-    "                                      **kwargs\n",
-    "                                      )\n",
+    "    nec_list = Simulation.run_product(\n",
+    "            range_parameters={\n",
+    "                'D':{'range': [1, 3, 5]},\n",
+    "                'sample_size': {'range': [1, 30, 50]},\n",
+    "                'sample_method': {'range': ['basic', 'subsample']},\n",
+    "                'update_conn': {'range': [True]},\n",
+    "                'seed': {'range': seeds}\n",
+    "                },\n",
+    "            cache=\"all\",\n",
+    "            cache_sim=False,\n",
+    "            parallel=True,\n",
+    "            plot_opinion=True,\n",
+    "            **kwargs)\n",
     "\n",
     "old_dir, new_dir = set_cache_dir(old_dir)\n",
     "logging.getLogger().setLevel(logging_level)\n",
@@ -2181,8 +2207,20 @@
     "    nec_dict.setdefault(key, [])\n",
     "    nec_dict[key].append(nec)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'logging' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-e240ad2bc0fc>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# suppress logging for clean progressbar\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mlogging_level\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlogging\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetLogger\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetEffectiveLevel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mlogging\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetLogger\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msetLevel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlogging\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mWARNING\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;32mfrom\u001B[0m \u001B[0mopdynamics\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mutils\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcache\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mget_cache_dir\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mset_cache_dir\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mold_dir\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mnew_dir\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mset_cache_dir\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpath\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"/content\"\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;34m\".cache\"\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;34m\"delayed_noise\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'logging' is not defined"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
