more changes to the new seaborn api

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -720,7 +720,7 @@
     "axbig = fig.add_subplot(gs[0, :])\n",
     "fig.subplots_adjust(hspace=0.3)\n",
     "vis.show_opinions(color_code='line', subsample=2, lw=1, ax=axbig)\n",
-    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw=0.1, shade=True), title=f\"5\")\n",
+    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw_adjust=0.1, shade=True), title=f\"5\")\n",
     "vis.show_opinions_snapshot(ax=axs[1,-1], kde_kws=dict(shade=True), title=f\"{T}\")"
    ],
    "metadata": {
@@ -864,8 +864,11 @@
    },
    "outputs": [],
    "source": [
+    "vis = VisEchoChamber(ec_polar)\n",
+    "\n",
     "levels=10\n",
-    "g = vis.show_nearest_neighbour(bw=0.5, color=sns.cubehelix_palette(levels, reverse=True)[levels//2],\n",
+    "\n",
+    "g = vis.show_nearest_neighbour(bw_adjust=0.5, color=sns.cubehelix_palette(levels, reverse=True)[levels//2],\n",
     "                               cmap=sns.cubehelix_palette(levels, reverse=True, as_cmap=True), levels=levels,\n",
     "                               shade_lowest=True)\n",
     "# adjust limits based on xaxis\n",
@@ -945,12 +948,12 @@
     "    # polarised opinions trace\n",
     "    vis = VisEchoChamber(ec_polar)\n",
     "    vis.show_opinions(ax=ax_trace_1, color_code='line', subsample=10, lw=0.5, title=\"Polarised\", rasterized=True)\n",
-    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(shade=False, bw=0.15), vertical=True, title=False)\n",
+    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # radicalised opinions trace\n",
     "    vis_radical = VisEchoChamber(ec_radical)\n",
     "    vis_radical.show_opinions(ax=ax_trace_2, color_code='line', subsample=2, lw=1, title=\"Radicalised\", rasterized=True)\n",
-    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(shade=False, bw=0.15), vertical=True, title=False)\n",
+    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # activity vs opinion\n",
     "    file_name = \".cache/activity_vs_opinion.h5\"\n",
@@ -1177,7 +1180,7 @@
     "    fig.subplots_adjust(hspace=0.8)\n",
     "    for i, (key, other) in enumerate(parameters.items()):\n",
     "        show_noise_panel(df, key,\n",
-    "                         kde_kwargs=dict(bw=0.1, cut=2),\n",
+    "                         kde_kwargs=dict(bw_adjust=0.1, cut=2),\n",
     "                         ax=ax[i])\n",
     "        for _ax in ax[i]:\n",
     "            _ax.set_title(f\"{other['title']}={_ax.get_title()}\")\n",
@@ -1314,7 +1317,7 @@
     "fig, ax = plt.subplots(2, 2, gridspec_kw=dict(width_ratios=[1,0.1]))\n",
     "vis.show_opinions(ax=ax[0,0])\n",
     "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
-    "vis.show_opinions_snapshot(ax=ax[0,1], vertical=True, kde_kws=dict(bw=0.1))\n",
+    "vis.show_opinions_snapshot(ax=ax[0,1], vertical=True, kde_kws=dict(bw_adjust=0.1))\n",
     "vis.show_adjacency_matrix(\"mesh\", sort=True,\n",
     "                                  cmap=sns.cubehelix_palette(light=1, as_cmap=True),\n",
     "                                  cbar_kws=dict(pad=0.05, cax=ax[1,1]),\n",
@@ -1438,7 +1441,7 @@
    "outputs": [],
    "source": [
     "grid_kwargs = dict(sharex=False, sharey=False, margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)\n",
+    "kde_kwargs = dict(bw_adjust=0.01)\n",
     "g = show_opinion_grid(df, ['alpha_2','D','k_steps'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "g.add_legend(fontsize='large')"
    ]
@@ -1617,7 +1620,7 @@
     "    vis = VisEchoChamber(sc)\n",
     "    vis.show_opinions(color_code='line', ax=ax[0])\n",
     "    vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
-    "                            kde_kws=dict(bw=0.1), color=palette[i])\n",
+    "                            kde_kws=dict(bw_adjust=0.1), color=palette[i])\n",
     "ax[0].set_ylim(-5,5)\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)"
@@ -1709,7 +1712,7 @@
    "source": [
     "grid_kwargs = dict(sharex=True, sharey=False,\n",
     "                   margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)\n",
+    "kde_kwargs = dict(bw_adjust=0.01)\n",
     "\n",
     "sub_df = df[\n",
     "    (df[\"D\"].isin([0.0, 1.0, 2.0, 3.0, 4.0, 5.0])) & (df[\"sample_size\"].isin([1, 10]))\n",
@@ -1808,7 +1811,7 @@
     "                    margin_titles=False, legend_out=True,\n",
     "                    height=height, aspect=aspect,\n",
     "                    )\n",
-    "    kde_kwargs = dict(lw=0.5, bw=0.1)\n",
+    "    kde_kwargs = dict(lw=0.5, bw_adjust=0.1)\n",
     "    sub_df['D'] = sub_df['D'].astype(int)\n",
     "    g = sns.FacetGrid(sub_df, col=\"D\", col_wrap=col_wrap, hue=\"n\", **grid_kwargs)\n",
     "\n",
@@ -1873,7 +1876,7 @@
     "    ax = axs[0]\n",
     "    cbar_ax = axs[1]\n",
     "    sns.kdeplot(sub_df[OPINION_SYMBOL], sub_df[\"D\"],\n",
-    "                # bw=0.1,\n",
+    "                # bw_adjust=0.1,\n",
     "                shade=True, shade_lowest=True, cmap='Spectral_r',\n",
     "                cbar=True,cbar_ax=cbar_ax,\n",
     "                ax=ax)\n",
@@ -2374,7 +2377,7 @@
     "    vis.show_opinions(color_code='line', ax=ax[i, 0],\n",
     "                      title=sample_method if type(sample_method) is str else sample_method.__name__)\n",
     "    vis.show_opinions_snapshot(ax=ax[i, 1], vertical=True,\n",
-    "                            kde_kws=dict(bw=0.1), color=palette[i], title=None)\n",
+    "                            kde_kws=dict(bw_adjust=0.1), color=palette[i], title=None)\n",
     "    if i<len(clt_method_names):\n",
     "        ax[i,0].set_xlabel(\"\")\n",
     "        ax[i,1].set_xlabel(\"\")\n",
@@ -2504,7 +2507,7 @@
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[10,1]))\n",
     "fig.subplots_adjust(wspace=0.1)\n",
     "vis.show_opinions(ax=ax[0], title=\"Polarised\")\n",
-    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw=0.15), vertical=True)\n",
+    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True)\n",
     "sns.despine()\n",
     "sns.despine(ax=ax[1], left=True)\n",
     "ax[1].set_ylabel(\"\")\n",
@@ -2530,7 +2533,7 @@
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[10,1]))\n",
     "fig.subplots_adjust(wspace=0.1)\n",
     "vis.show_opinions(ax=ax[0], title=\"Polarised\")\n",
-    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw=0.15), vertical=True)\n",
+    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True)\n",
     "sns.despine()\n",
     "sns.despine(ax=ax[1], left=True)\n",
     "ax[1].set_ylabel(\"\")\n",
