fix minor compat errors

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -720,8 +720,8 @@
     "axbig = fig.add_subplot(gs[0, :])\n",
     "fig.subplots_adjust(hspace=0.3)\n",
     "vis.show_opinions(color_code='line', subsample=2, lw=1, ax=axbig)\n",
-    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw_adjust=0.1, shade=True), title=f\"5\")\n",
-    "vis.show_opinions_snapshot(ax=axs[1,-1], kde_kws=dict(shade=True), title=f\"{T}\")"
+    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw_adjust=0.1, fill=True), title=f\"5\")\n",
+    "vis.show_opinions_snapshot(ax=axs[1,-1], kde_kws=dict(fill=True), title=f\"{T}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -870,7 +870,7 @@
     "\n",
     "g = vis.show_nearest_neighbour(bw_adjust=0.5, color=sns.cubehelix_palette(levels, reverse=True)[levels//2],\n",
     "                               cmap=sns.cubehelix_palette(levels, reverse=True, as_cmap=True), levels=levels,\n",
-    "                               shade_lowest=True)\n",
+    "                               thresh=0)\n",
     "# adjust limits based on xaxis\n",
     "from scipy import stats\n",
     "x_data, y_data = g.ax_marg_x.get_lines()[0].get_data()\n",
@@ -948,12 +948,12 @@
     "    # polarised opinions trace\n",
     "    vis = VisEchoChamber(ec_polar)\n",
     "    vis.show_opinions(ax=ax_trace_1, color_code='line', subsample=10, lw=0.5, title=\"Polarised\", rasterized=True)\n",
-    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True, title=False)\n",
+    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # radicalised opinions trace\n",
     "    vis_radical = VisEchoChamber(ec_radical)\n",
     "    vis_radical.show_opinions(ax=ax_trace_2, color_code='line', subsample=2, lw=1, title=\"Radicalised\", rasterized=True)\n",
-    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True, title=False)\n",
+    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # activity vs opinion\n",
     "    file_name = \".cache/activity_vs_opinion.h5\"\n",
@@ -1815,8 +1815,8 @@
     "    sub_df['D'] = sub_df['D'].astype(int)\n",
     "    g = sns.FacetGrid(sub_df, col=\"D\", col_wrap=col_wrap, hue=\"n\", **grid_kwargs)\n",
     "\n",
-    "    kde_kwargs.setdefault(\"shade\", True)\n",
-    "    kde_kwargs.setdefault(\"shade_lowest\", False)\n",
+    "    kde_kwargs.setdefault(\"fill\", True)\n",
+    "    kde_kwargs.setdefault(\"thresh\", 1)\n",
     "    g.map(sns.kdeplot, OPINION_SYMBOL, **kde_kwargs)\n",
     "    g.set(xlim=(-5,5), ylim=(0, g.axes[0].get_ylim()[1]*1.1))\n",
     "    for ax in g.axes[-col_wrap:]:\n",
@@ -1877,7 +1877,7 @@
     "    cbar_ax = axs[1]\n",
     "    sns.kdeplot(sub_df[OPINION_SYMBOL], sub_df[\"D\"],\n",
     "                # bw_adjust=0.1,\n",
-    "                shade=True, shade_lowest=True, cmap='Spectral_r',\n",
+    "                fill=True, thresh=0, cmap='Spectral_r',\n",
     "                cbar=True,cbar_ax=cbar_ax,\n",
     "                ax=ax)\n",
     "    ax.set_xlim(-4, 4)\n",
@@ -2488,7 +2488,7 @@
     "fig, ax = plt.subplots(2, 1, figsize=(10,10), sharex=True)\n",
     "fig.subplots_adjust(hspace=0.3)\n",
     "vis.show_agent_opinions(direction=True, sort=True, ax=ax[0])\n",
-    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=True))\n",
+    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(fill=True))\n",
     "ax[1].set_xticklabels(ax[1].get_xticks())\n",
     "sns.despine()"
    ],
@@ -2507,7 +2507,7 @@
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[10,1]))\n",
     "fig.subplots_adjust(wspace=0.1)\n",
     "vis.show_opinions(ax=ax[0], title=\"Polarised\")\n",
-    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True)\n",
+    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True)\n",
     "sns.despine()\n",
     "sns.despine(ax=ax[1], left=True)\n",
     "ax[1].set_ylabel(\"\")\n",
@@ -2533,7 +2533,7 @@
     "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[10,1]))\n",
     "fig.subplots_adjust(wspace=0.1)\n",
     "vis.show_opinions(ax=ax[0], title=\"Polarised\")\n",
-    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(shade=False, bw_adjust=0.15), vertical=True)\n",
+    "vis.show_opinions_snapshot(ax=ax[1], kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True)\n",
     "sns.despine()\n",
     "sns.despine(ax=ax[1], left=True)\n",
     "ax[1].set_ylabel(\"\")\n",
