latest improvemenets and bug fixes

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -128,9 +128,9 @@
     "import seaborn as sns\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
-    "from matplotlib.ticker import MaxNLocator\n",
     "from matplotlib.colors import LogNorm\n",
     "from matplotlib.cbook import flatten\n",
+    "from matplotlib.collections import PolyCollection\n",
     "\n",
     "try:\n",
     "    import opdynamics.simulation as Simulation\n",
@@ -720,8 +720,8 @@
     "axbig = fig.add_subplot(gs[0, :])\n",
     "fig.subplots_adjust(hspace=0.3)\n",
     "vis.show_opinions(color_code='line', subsample=2, lw=1, ax=axbig)\n",
-    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw_adjust=0.1, fill=True), title=f\"5\")\n",
-    "vis.show_opinions_snapshot(ax=axs[1,-1], kde_kws=dict(fill=True), title=f\"{T}\")"
+    "vis.show_opinions_snapshot(t=5.0, ax=axs[1,0], kde_kws=dict(bw_adjust=0.1), , fill=True title=f\"5\")\n",
+    "vis.show_opinions_snapshot(ax=axs[1,-1], fill=True, title=f\"{T}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -948,12 +948,12 @@
     "    # polarised opinions trace\n",
     "    vis = VisEchoChamber(ec_polar)\n",
     "    vis.show_opinions(ax=ax_trace_1, color_code='line', subsample=10, lw=0.5, title=\"Polarised\", rasterized=True)\n",
-    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True, title=False)\n",
+    "    vis.show_opinions_snapshot(ax=ax_dist_1, kde_kws=dict(bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # radicalised opinions trace\n",
     "    vis_radical = VisEchoChamber(ec_radical)\n",
     "    vis_radical.show_opinions(ax=ax_trace_2, color_code='line', subsample=2, lw=1, title=\"Radicalised\", rasterized=True)\n",
-    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(fill=False, bw_adjust=0.15), vertical=True, title=False)\n",
+    "    vis_radical.show_opinions_snapshot(ax=ax_dist_2, kde_kws=dict(bw_adjust=0.15), vertical=True, title=False)\n",
     "\n",
     "    # activity vs opinion\n",
     "    file_name = \".cache/activity_vs_opinion.h5\"\n",
@@ -1042,12 +1042,12 @@
    "source": [
     "## Open system (external noise)\n",
     "\n",
-    "$\\dot{x}_i = K \\cdot \\sum_{j=1} A_{ij}(t) \\cdot \\tanh{(\\alpha \\cdot x_j)} + D \\cdot \\xi (t)$\n",
+    "$\\dot{x}_i = -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)+ D \\cdot \\xi (t)$\n",
     "\n",
-    " Symbol        | Variable | Keyword      | Class (inherits from)             | Meaning\n",
-    "---------------|----------|--------------|-----------------------------------|---------------\n",
-    " $\\xi(t)$      | -        | -            | ``OpenChamber(NoisyEchoChamber)`` | [Wiener process](https://en.wikipedia.org/wiki/Wiener_process)\n",
-    " $\\dot{\\xi}$   | -        | -            | ``OpenChamber(NoisyEchoChamber)`` | Derivative $\\mathcal{N}(0,\\sqrt{dt})$\n"
+    " Symbol        | Class (inherits from)             | Meaning\n",
+    "---------------|-----------------------------------|---------------\n",
+    " $\\xi(t)$      | ``OpenChamber(NoisyEchoChamber)`` | [Wiener process](https://en.wikipedia.org/wiki/Wiener_process)\n",
+    " $\\dot{\\xi}$   | ``OpenChamber(NoisyEchoChamber)`` | Derivative $\\mathcal{N}(0,\\sqrt{dt})$\n"
    ]
   },
   {
@@ -1595,18 +1595,26 @@
     "dt = 0.01\n",
     "T = 5 #@param {type:\"slider\", min:0, max:10, step:1}\n",
     "# Nudge arguments\n",
-    "D = 3 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
+    "D = 0 #@param {type:\"slider\", min:0, max:20, step:0.5}\n",
     "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "sample_method = \"basic\" #@param [\"basic\", \"outer_sigmoid\", \"inner_sigmoid\", \"subsample\"]\n",
     "\n",
-    "integration_method = \"Euler\" #@param [\"Euler\", \"RK45\"]\n",
+    "integration_method = \"RK45\" #@param [\"Euler\", \"RK45\"]\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
-    "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
+    "fig, axs = plt.subplots(2, 3, gridspec_kw=dict(width_ratios=[1, 1, 0.1],\n",
+    "                                               height_ratios=[0.1, 1]),\n",
+    "                        sharey=\"row\", sharex=\"col\")\n",
+    "(ax_empty, ax_marg_x, ax_empty_2), (ax_opinions_t, ax_joint, ax_marg_y) = axs\n",
+    "ax_empty.remove()\n",
+    "ax_empty_2.remove()\n",
+    "fig.subplots_adjust(wspace=0.1, hspace=0.1)\n",
     "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
     "\n",
     "seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
+    "\n",
+    "nn = np.empty(N*iterations)\n",
+    "x = np.empty(N*iterations)\n",
     "\n",
     "for i in range(iterations):\n",
     "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
@@ -1618,10 +1626,22 @@
     "                               seed=seeds[i], cache=\"all\")\n",
     "\n",
     "    vis = VisEchoChamber(sc)\n",
-    "    vis.show_opinions(color_code='line', ax=ax[0])\n",
-    "    vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
-    "                            kde_kws=dict(bw_adjust=0.1), color=palette[i])\n",
-    "ax[0].set_ylim(-5,5)\n",
+    "    vis.show_opinions(color_code='line', ax=ax_opinions_t,\n",
+    "                      title=f\"D={D}, n={sample_size} ({sample_method})\\n\"\n",
+    "                            f\"K={K}, α={α}, β={β}\\n\"\n",
+    "                            f\"N={N}, m={m}\\nε={ε}, Υ={Υ}\\n\"\n",
+    "                            f\"dt={dt} ({integration_method})\"\n",
+    "                      )\n",
+    "    nn[i*N:(i+1)*N] = sc.get_nearest_neighbours()\n",
+    "    x[i*N:(i+1)*N] = sc.opinions\n",
+    "\n",
+    "show_jointplot(nn, x,\n",
+    "                ax=(ax_joint, ax_marg_x, ax_marg_y),\n",
+    "                marginal_kws=dict(bw=0.5))\n",
+    "\n",
+    "ax_opinions_t.set_ylim(-5,5)\n",
+    "ax_joint.set_xlim(-5,5)\n",
+    "ax_joint.set_xlabel(MEAN_NEAREST_NEIGHBOUR)\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)"
    ],
@@ -1827,8 +1847,11 @@
     "    for line in g._legend.get_lines():\n",
     "        line.set_linewidth(1.0)\n",
     "    for f, f_ax in enumerate(g.axes):\n",
-    "    # f_ax = g.axes[1]\n",
-    "        y_data_max = max([max(l.get_ydata()) for l in f_ax.get_lines()])*0.96\n",
+    "        y_data_max = max([max(l.get_paths()[0].vertices[:,1])\n",
+    "                          for l in f_ax.get_children()\n",
+    "                          if isinstance(l, PolyCollection)\n",
+    "                          ]\n",
+    "                         )*0.96\n",
     "        y_max = f_ax.get_ylim()[1]*1.05\n",
     "        color='grey'\n",
     "        f_ax.annotate(PEAK_DISTANCE,\n",
