minor fixes and quality of life improvements

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -146,10 +146,11 @@
     "                                  show_noise_panel,\n",
     "                                  show_opinion_grid,\n",
     "                                  )\n",
-    "from opdynamics.metrics.opinions import calc_distribution_differences\n",
+    "from opdynamics.metrics.opinions import calc_distribution_differences, distribution_modality\n",
     "from opdynamics.visualise import plot_surface_product, plot_surfaces\n",
     "from opdynamics.utils.distributions import negpowerlaw\n",
     "from opdynamics.utils.plot_utils import df_multi_mask, move_cbar_label_to_title\n",
+    "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
     "from opdynamics.utils.constants import *\n",
     "\n",
     "try:\n",
@@ -1601,49 +1602,50 @@
     "\n",
     "integration_method = \"RK45\" #@param [\"Euler\", \"RK45\"]\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
+    "with sns.plotting_context(\"paper\"):\n",
+    "    plt.rcParams['figure.dpi'] = 200\n",
+    "    fig, axs = plt.subplots(2, 3, gridspec_kw=dict(width_ratios=[1, 1, 0.1],\n",
+    "                                                   height_ratios=[0.1, 1]),\n",
+    "                            sharey=\"row\", sharex=\"col\")\n",
+    "    (ax_empty, ax_marg_x, ax_empty_2), (ax_opinions_t, ax_joint, ax_marg_y) = axs\n",
+    "    ax_empty.remove()\n",
+    "    ax_empty_2.remove()\n",
+    "    fig.subplots_adjust(wspace=0.1, hspace=0.1)\n",
+    "    palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
     "\n",
-    "fig, axs = plt.subplots(2, 3, gridspec_kw=dict(width_ratios=[1, 1, 0.1],\n",
-    "                                               height_ratios=[0.1, 1]),\n",
-    "                        sharey=\"row\", sharex=\"col\")\n",
-    "(ax_empty, ax_marg_x, ax_empty_2), (ax_opinions_t, ax_joint, ax_marg_y) = axs\n",
-    "ax_empty.remove()\n",
-    "ax_empty_2.remove()\n",
-    "fig.subplots_adjust(wspace=0.1, hspace=0.1)\n",
-    "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "    seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
     "\n",
-    "seeds = np.geomspace(1, 100000, num=20, dtype=int)\n",
+    "    nn = np.empty(N*iterations)\n",
+    "    x = np.empty(N*iterations)\n",
     "\n",
-    "nn = np.empty(N*iterations)\n",
-    "x = np.empty(N*iterations)\n",
+    "    for i in range(iterations):\n",
+    "        sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
+    "                                   activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
+    "                                   r=r, dt=dt, T=T, D=D,\n",
+    "                                   sample_size=sample_size, sample_method=sample_method,\n",
+    "                                   method=integration_method,\n",
+    "                                   plot_opinion=False,\n",
+    "                                   seed=seeds[i], cache=\"all\")\n",
     "\n",
-    "for i in range(iterations):\n",
-    "    sc = Simulation.run_params(cls=SampleChamber, N=N, m=m, K=K, alpha=α, beta=β,\n",
-    "                               activity=activity_distribution, gamma=Υ, epsilon=ε,\n",
-    "                               r=r, dt=dt, T=T, D=D,\n",
-    "                               sample_size=sample_size, sample_method=sample_method,\n",
-    "                               method=integration_method,\n",
-    "                               plot_opinion=False,\n",
-    "                               seed=seeds[i], cache=\"all\")\n",
+    "        vis = VisEchoChamber(sc)\n",
+    "        vis.show_opinions(color_code='line', ax=ax_opinions_t,\n",
+    "                          title=f\"D={D}, n={sample_size} ({sample_method})\\n\"\n",
+    "                                f\"K={K}, α={α}, β={β}\\n\"\n",
+    "                                f\"N={N}, m={m}\\nε={ε}, Υ={Υ}\\n\"\n",
+    "                                f\"dt={dt} ({integration_method})\"\n",
+    "                          )\n",
+    "        nn[i*N:(i+1)*N] = sc.get_nearest_neighbours()\n",
+    "        x[i*N:(i+1)*N] = sc.opinions\n",
     "\n",
-    "    vis = VisEchoChamber(sc)\n",
-    "    vis.show_opinions(color_code='line', ax=ax_opinions_t,\n",
-    "                      title=f\"D={D}, n={sample_size} ({sample_method})\\n\"\n",
-    "                            f\"K={K}, α={α}, β={β}\\n\"\n",
-    "                            f\"N={N}, m={m}\\nε={ε}, Υ={Υ}\\n\"\n",
-    "                            f\"dt={dt} ({integration_method})\"\n",
-    "                      )\n",
-    "    nn[i*N:(i+1)*N] = sc.get_nearest_neighbours()\n",
-    "    x[i*N:(i+1)*N] = sc.opinions\n",
+    "    show_jointplot(nn, x,\n",
+    "                    ax=(ax_joint, ax_marg_x, ax_marg_y),\n",
+    "                    marginal_kws=dict(bw=0.5))\n",
     "\n",
-    "show_jointplot(nn, x,\n",
-    "                ax=(ax_joint, ax_marg_x, ax_marg_y),\n",
-    "                marginal_kws=dict(bw=0.5))\n",
+    "    ax_opinions_t.set_ylim(-5,5)\n",
+    "    ax_joint.set_xlim(-5,5)\n",
+    "    ax_joint.set_xlabel(MEAN_NEAREST_NEIGHBOUR)\n",
     "\n",
-    "ax_opinions_t.set_ylim(-5,5)\n",
-    "ax_joint.set_xlim(-5,5)\n",
-    "ax_joint.set_xlabel(MEAN_NEAREST_NEIGHBOUR)\n",
-    "\n",
-    "logging.getLogger().setLevel(logging_level)"
+    "    logging.getLogger().setLevel(logging_level)"
    ],
    "execution_count": null,
    "outputs": []
@@ -1700,11 +1702,17 @@
     "    \"K\": {\"range\": [1, 2, 3], \"title\": \"K\"},\n",
     "}\n",
     "\n",
+    "cache_sim_name = \"noise_source.h5\"\n",
+    "\n",
+    "run_range_parameters = (\n",
+    "    range_parameters if os.path.exists(f\"{get_cache_dir()}/{cache_sim_name}\") else None\n",
+    ")\n",
+    "\n",
     "df = Simulation.run_product(\n",
-    "    range_parameters,\n",
+    "    run_range_parameters,\n",
     "    noise_start=0,\n",
     "    cache=True,\n",
-    "    cache_sim=True,\n",
+    "    cache_sim=cache_sim_name,\n",
     "    parallel=True,\n",
     "    **parameters\n",
     ")\n",
@@ -2055,8 +2063,7 @@
     "# suppress logging for clean progressbar\n",
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
     "logging.getLogger().setLevel(logging.WARNING)\n",
-    "from opdynamics.utils.cache import get_cache_dir, set_cache_dir\n",
-    "from opdynamics.metrics.opinions import distribution_modality\n",
+    "\n",
     "old_dir, new_dir = set_cache_dir(os.path.join(\"/content\",\".cache\",\"delayed_noise\"))\n",
     "\n",
     "noise_start = 10.\n",
