--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -45,7 +45,6 @@
    "metadata": {},
    "source": [
     "If in a Colab notebook, this will\n",
-    "1. mount your Google Drive (by asking for an authorization code)\n",
     "1. pull the latest version of ``opinion_dynamics`` from GitHub\n",
     "1. add ``opinion_dynamics`` to path\n",
     "1. install/upgrade packages\n",
@@ -53,6 +52,7 @@
     "    - upgrade ``tables`` for appending to `hdf5` files without throwing an error.\n",
     "    - ``vaex`` for large file reading without crashing the session\n",
     "        - upgrade ``IPython`` for ``vaex`` [see #514](https://github.com/vaexio/vaex/issues/514) (upgrading seems to make colab unhappy and won't display Jupyter widgets).\n",
+    "1. mount your Google Drive (by asking for an authorization code)\n",
     "1. make `.cache` and `.output` in your Google Drive under `My Drive > Colab Notebooks > opdynamics`\n",
     "1. create symlinks between Colab's temporary local `.cache` and `.output` and the Google Drive folders for persistence\n",
     "\n",
@@ -67,18 +67,15 @@
    "outputs": [],
    "source": [
     "#@title Colab Setup { display-mode: \"form\" }\n",
+    "\n",
+    "# for persisting data across sessions\n",
+    "connect_gdrive = False #@param {type:\"boolean\"}\n",
+    "\n",
     "try:\n",
-    "    # connect GDrive for retrieving/saving results\n",
     "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n",
     "\n",
     "    # Clone github repository\n",
-    "    from os.path import join  \n",
-    "    GIT_USERNAME = \"chriscurrin\"\n",
-    "    # TODO: remove this from github before publishing\n",
-    "    GIT_TOKEN = \"bbf24b4521d81a3893d6c93eb806d41b47322a33\"  \n",
-    "    GIT_REPOSITORY = \"opinion_dynamics\" \n",
-    "    GIT_PATH = \"https://\" + GIT_TOKEN + \"@github.com/\" + GIT_USERNAME + \"/\" + GIT_REPOSITORY + \".git\"\n",
+    "    GIT_REPO = \"https://github.com/ChrisCurrin/opinion_dynamics.git\"\n",
     "    !rm -rf ./temp\n",
     "    !git clone --quiet \"{GIT_PATH}\" ./temp\n",
     "\n",
@@ -88,15 +85,21 @@
     "    # need latest tqdm version for tenumerate and tables to prevent HDF read error\n",
     "    !pip install -q --upgrade tqdm tables\n",
     "    !pip install -q --upgrade vaex IPython\n",
-    "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
-    "    import os\n",
-    "    try:\n",
-    "        os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\")\n",
-    "        os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/output\")\n",
-    "    except IOError:\n",
-    "        pass\n",
-    "    !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\" \".cache\"\n",
-    "    !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/output\" \"output\"\n",
+    "\n",
+    "    if connect_gdrive:\n",
+    "        # connect GDrive for retrieving/saving results\n",
+    "        drive.mount('/content/drive')\n",
+    "\n",
+    "        # create symlink between a Drive folder and the cache for persistence between sessions\n",
+    "        import os\n",
+    "        try:\n",
+    "            os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\")\n",
+    "            os.makedirs(\"/content/drive/My Drive/Colab Notebooks/opdynamics/output\")\n",
+    "        except IOError:\n",
+    "            pass\n",
+    "        !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/.cache\" \".cache\"\n",
+    "        !ln -s \"/content/drive/My Drive/Colab Notebooks/opdynamics/output\" \"output\"\n",
+    "\n",
     "except ModuleNotFoundError:\n",
     "    print(\"local notebook\")\n",
     "    pass"
