--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -3235,8 +3235,8 @@
     "#@title Playground\n",
     "%matplotlib inline\n",
     "\n",
-    "noise_start = 10.\n",
-    "noise_length = 10.\n",
+    "noise_start = 5.\n",
+    "noise_length = 5.\n",
     "recovery = noise_length\n",
     "num = 1\n",
     "interval = 0\n",
@@ -3248,16 +3248,16 @@
     "\n",
     "# Nudge arguments\n",
     "\n",
-    "D = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "D = 4 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "sample_size = 30 #@param {type:\"slider\", min:0, max:50, step:1}\n",
-    "sample_method = \"subsample\" #@param [\"full\", \"subsample\", \"simple\"]\n",
-    "seed = \"1337\" #@param [\"1337\", \"10725983\", \"7988657\", \"1572038\", \"15379820\"] {allow-input: true}\n",
+    "sample_method = \"full\" #@param [\"full\", \"subsample\", \"simple\"]\n",
+    "seed = \"7988657\" #@param [\"1337\", \"10725983\", \"7988657\", \"1572038\", \"15379820\"] {allow-input: true}\n",
     "\n",
     "# polar opinions\n",
     "N = 1000 #@param {type:\"integer\"}\n",
     "m = 10 #@param {type:\"integer\"}\n",
-    "α = 2 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "K = 2 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
     "ε = 0.01 #@param {type:\"slider\", min:0.005, max:0.05, step:0.005}\n",
     "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
     "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
@@ -3273,7 +3273,7 @@
     "\n",
     "kwargs = dict(N=N,\n",
     "              m=m,\n",
-    "              activity_distribution = negpowerlaw,\n",
+    "              activity_distribution=negpowerlaw,\n",
     "              epsilon=ε,\n",
     "              gamma=Υ,\n",
     "              dt=dt,\n",
@@ -3297,11 +3297,11 @@
     "with sns.plotting_context(\"paper\"):\n",
     "  plt.rcParams[\"figure.dpi\"] = 200\n",
     "  plt.rcParams[\"figure.figsize\"] = (4,3)\n",
-    "  with LoggingContext(logging.INFO):\n",
+    "  with LoggingContext(logging.DEBUG):\n",
     "    nsn = Simulation.run_periodic_noise(**kwargs, \n",
     "                                        cache=\"all\", \n",
     "                                        plot_opinion=True, \n",
-    "                                        plot_kws={\"time_points\":time_points}\n",
+    "                                        plot_kws={\"time_points\":time_points, \"dist_kwargs\":{\"kind\":\"kde\"}}\n",
     "                                        )\n",
     "  \n",
     "  fig = plt.gcf()\n",
@@ -3326,15 +3326,6 @@
     "          ax.annotate(PEAK_DISTANCE, xy=(0,1), xycoords='axes fraction',\n",
     "                      va='bottom', ha='right', fontsize='small')\n",
     "  fig.savefig(f\"output/delayed_noise_sample_D={D}.svg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nsn.adj_mat._time_mat is None"
    ]
   },
   {
@@ -3545,13 +3536,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.colors import SymLogNorm\n",
     "plt.barh(\n",
     "    nsn.agent_idxs,\n",
     "    np.sort(pre_noise_opinions_unsorted),\n",
     "    edgecolor=\"None\",\n",
     "    linewidth=0,  # remove bar borders\n",
     "    height=1,  # per agent\n",
-    "    alpha=0.8,\n",
+    "    alpha=0.5,\n",
+    "    color=PRE_RDN_COLOR,\n",
     ")\n",
     "plt.barh(\n",
     "    nsn.agent_idxs,\n",
@@ -3559,8 +3552,42 @@
     "    edgecolor=\"None\",\n",
     "    linewidth=0,  # remove bar borders\n",
     "    height=1,  # per agent\n",
-    "    alpha=0.8,\n",
-    ")\n"
+    "    alpha=0.5,\n",
+    "    color=POST_RDN_COLOR,\n",
+    ")\n",
+    "plt.figure()\n",
+    "\n",
+    "change_in_opinions = post_noise_opinions_unsorted - pre_noise_opinions_unsorted\n",
+    "change_in_opinions_sorted = np.sort(post_noise_opinions_unsorted)-np.sort(pre_noise_opinions_unsorted)\n",
+    "cmap_change = sns.diverging_palette(145, 300, s=-60, as_cmap=True)\n",
+    "vmax = np.max(np.abs(change_in_opinions))\n",
+    "vmin = -vmax\n",
+    "v = vis._get_equal_opinion_limits()\n",
+    "\n",
+    "mask = ((change_in_opinions_sorted>0) & (np.sort(pre_noise_opinions_unsorted)>0)) | ((change_in_opinions_sorted<0) & (np.sort(pre_noise_opinions_unsorted)<0))\n",
+    "\n",
+    "sm_change = ScalarMappable(norm=SymLogNorm(linthresh=0.1, vmin=vmin, vmax=vmax), cmap=cmap_change)\n",
+    "\n",
+    "direction = sm_change.to_rgba(change_in_opinions_sorted)\n",
+    "\n",
+    "plt.barh(\n",
+    "    np.array(nsn.agent_idxs)[mask],\n",
+    "    change_in_opinions_sorted[mask],\n",
+    "    edgecolor=\"None\",\n",
+    "    linewidth=0,  # remove bar borders\n",
+    "    height=1,  # per agent\n",
+    "    alpha=0.5,\n",
+    "    color='grey'\n",
+    ")\n",
+    "plt.barh(\n",
+    "    np.array(nsn.agent_idxs)[~mask],\n",
+    "    change_in_opinions_sorted[~mask],\n",
+    "    edgecolor=\"None\",\n",
+    "    linewidth=0,  # remove bar borders\n",
+    "    height=1,  # per agent\n",
+    "    alpha=0.5,\n",
+    "    color=DELTA_RDN_COLOR\n",
+    ")"
    ]
   },
   {
@@ -3569,31 +3596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(3.375, 2.618), dpi=200)\n",
-    "gs = gridspec.GridSpec(\n",
-    "    nrows=2,\n",
-    "    ncols=2,\n",
-    "    wspace=0.1,\n",
-    "    hspace=0.1,\n",
-    "    left=0.18,\n",
-    "    right=0.97,\n",
-    "    bottom=0.15,\n",
-    "    width_ratios=[1, 0.1],\n",
-    "    height_ratios=[0.1, 1],\n",
-    ")\n",
-    "# create axes\n",
-    "ax_joint = fig.add_subplot(gs[1, 0])\n",
-    "ax_marg_x = fig.add_subplot(gs[0, 0], sharex=ax_joint)\n",
-    "ax_marg_y = fig.add_subplot(gs[1, 1], sharey=ax_joint)\n",
-    "sns.despine(ax=ax_marg_x, left=True)\n",
-    "sns.despine(ax=ax_marg_y, bottom=True)\n",
-    "\n",
-    "show_jointplot(\n",
-    "    nsn.opinions_at_t(10.0)[-1],\n",
-    "    nsn.get_nearest_neighbours(10.0),\n",
-    "    ax=(ax_joint, ax_marg_x, ax_marg_y),\n",
-    "    levels=10,\n",
-    ")\n",
+    "fig, ax_joint, ax_marg_x, ax_marg_y = vis.show_nearest_neighbour(t=noise_start, color=PRE_RDN_COLOR)\n",
     "ax_joint.set_xlim(-5, 5)\n",
     "ax_joint.set_ylim(-5, 5)\n"
    ]
@@ -3604,33 +3607,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(3.375, 2.618), dpi=200)\n",
-    "gs = gridspec.GridSpec(\n",
-    "    nrows=2,\n",
-    "    ncols=2,\n",
-    "    wspace=0.1,\n",
-    "    hspace=0.1,\n",
-    "    left=0.18,\n",
-    "    right=0.97,\n",
-    "    bottom=0.15,\n",
-    "    width_ratios=[1, 0.1],\n",
-    "    height_ratios=[0.1, 1],\n",
-    ")\n",
-    "# create axes\n",
-    "ax_joint = fig.add_subplot(gs[1, 0])\n",
-    "ax_marg_x = fig.add_subplot(gs[0, 0], sharex=ax_joint)\n",
-    "ax_marg_y = fig.add_subplot(gs[1, 1], sharey=ax_joint)\n",
-    "sns.despine(ax=ax_marg_x, left=True)\n",
-    "sns.despine(ax=ax_marg_y, bottom=True)\n",
-    "\n",
-    "show_jointplot(\n",
-    "    nsn.opinions_at_t(20.0)[-1],\n",
-    "    nsn.get_nearest_neighbours(20.0),\n",
-    "    ax=(ax_joint, ax_marg_x, ax_marg_y),\n",
-    "    levels=10,\n",
-    ")\n",
+    "fig, ax_joint, ax_marg_x, ax_marg_y = vis.show_nearest_neighbour(t=noise_start+noise_length, color=POST_RDN_COLOR)\n",
     "ax_joint.set_xlim(-5, 5)\n",
-    "ax_joint.set_ylim(-5, 5)\n"
+    "ax_joint.set_ylim(-5, 5)"
    ]
   },
   {
