--- a/figure 1 - opinion dynamics model and an external nudge.ipynb
+++ b/figure 1 - opinion dynamics model and an external nudge.ipynb
@@ -1515,11 +1515,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c4176b71d30849fd6ba85aa8d0161812e312886dc449c7d0123c7a6f033d3984"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('opinion_dynamics')",
+   "display_name": "Python 3.9.7 ('opinion_dynamics')",
    "language": "python",
    "name": "python3"
   },
@@ -1533,9 +1530,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "226e61cfb92a8b9c45768d4612b038ed73a395d12ebf56dc7d964d2bb7591a57"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
